tests/negative/broken-while.sp

(* Same as broken if *)
(* While won't compile *)

main:Void(){

    while thisIsNotACondition+2 {
        return 0; 
    }

}